--- a/templates/signup.html
+++ b/templates/signup.html
@@ -30,6 +30,10 @@
 
             <div class="form">
             <div class="field">
+                <input id="suEmail" type="email" placeholder="Email">
+                <div id="suEmailErr" class="err"></div>
+            </div>
+            <div class="field">
                 <input id="suUsername" type="text" placeholder="Username">
                 <div id="suUsernameErr" class="err"></div>
             </div>
